--- a/public/styles.css
+++ b/public/styles.css
@@ -1,74 +1,126 @@
-body{
-    font-family: 'Nunito';
+body {
+  font-family: "Nunito";
 }
 
-h2{
-    font-size: 18px;
-    padding: 10px 20px;
-    color: #575ed8;
+h2 {
+  font-size: 18px;
+  padding: 10px 20px;
+  color: #575ed8;
 }
 
-#deriv-chat{
-    max-width: 600px;
-    margin: 30px auto;
-    border: 1px solid #ddd;
-    box-shadow: 1px 3px 5px rgba(0,0,0,0.05);
-    border-radius: 2px;
+#deriv-chat {
+  max-width: 600px;
+  margin: 30px auto;
+  border: 1px solid #ddd;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.05);
+  border-radius: 2px;
 }
 
-#chat-window{
-    height: 400px;
-    overflow: auto;
-    background: #f9f9f9;
+#chat-window {
+  height: 400px;
+  overflow: auto;
+  background: #f9f9f9;
 }
 
-#output p{
-    padding: 14px 0px;
-    margin: 0 20px;
-    border-bottom: 1px solid #e9e9e9;
-    color: #555;
+#output p {
+  padding: 14px 0px;
+  margin: 0 20px;
+  border-bottom: 1px solid #e9e9e9;
+  color: #555;
 }
 
 #feedback {
-    height: 40px;
-    background-color: #f9f9f9;
+  height: 40px;
+  background-color: #f9f9f9;
 }
 
-#feedback p{
-    color: #000;
-    padding: 14px 0px;
-    margin: 0 20px;
+#feedback p {
+  color: #000;
+  padding: 14px 0px;
+  margin: 0 20px;
 }
 
-#output strong{
-    color: #575ed8;
+#output strong {
+  color: #575ed8;
 }
 
-label{
-    box-sizing: border-box;
-    display: block;
-    padding: 10px 20px;
+#output strong.server {
+  color: #c700ac;
 }
 
-input{
-    padding: 10px 20px;
-    box-sizing: border-box;
-    background: #eee;
-    border: 0;
-    display: block;
-    width: 100%;
-    background: #fff;
-    border-bottom: 1px solid #eee;
-    font-family: Nunito;
-    font-size: 16px;
+label {
+  box-sizing: border-box;
+  display: block;
+  padding: 10px 20px;
 }
 
-button{
-    background: #575ed8;
-    color: #fff;
-    font-size: 18px;
-    border: 0;
-    padding: 12px 0;
-    width: 100%;
-    border-radius: 0 0 2px 2px;
+input {
+  padding: 10px 20px;
+  box-sizing: border-box;
+  background: #eee;
+  border: 0;
+  display: block;
+  width: 100%;
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  font-family: Nunito;
+  font-size: 16px;
+}
+
+button {
+  background: #575ed8;
+  color: #fff;
+  font-size: 18px;
+  border: 0;
+  padding: 12px 0;
+  width: 100%;
+  border-radius: 0 0 2px 2px;
+}
+
+div.genshin-1 {
+  background: url(genshin-emote.jpg) -3px 0;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-2 {
+  background: url(genshin-emote.jpg) -180px 0;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-3 {
+  background: url(genshin-emote.jpg) -353px 0;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-4 {
+  background: url(genshin-emote.jpg) -527px 0;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-5 {
+  background: url(genshin-emote.jpg) -3px 200px;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-6 {
+  background: url(genshin-emote.jpg) -180px 200px;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-7 {
+  background: url(genshin-emote.jpg) -353px 200px;
+  width: 175px;
+  height: 200px;
+}
+
+div.genshin-8 {
+  background: url(genshin-emote.jpg) -527px 200px;
+  width: 172px;
+  height: 200px;
 }
